; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_text_style.c_text_style_Duplicate.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_text_style.c_text_style_Duplicate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @text_style_Duplicate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %18

8:                                                ; preds = %1
  %9 = call i32* @calloc(i32 1, i32 4)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @text_style_Copy(i32* %13, i32* %14)
  br label %16

16:                                               ; preds = %12, %8
  %17 = load i32*, i32** %4, align 8
  store i32* %17, i32** %2, align 8
  br label %18

18:                                               ; preds = %16, %7
  %19 = load i32*, i32** %2, align 8
  ret i32* %19
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @text_style_Copy(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
